...
	@IBOutlet weak var tableView: UITableView!
	@IBOutlet weak var noResults: UILabel!
	@IBOutlet weak var spinner: UIActivityIndicatorView!
	
	override func viewDidLoad() {
		super.viewDidLoad()
		title = "DuckDuckGo"
		spinner.center = view.center
		spinner.startAnimating()
		noResults.center = view.center
		tableView.register(UITableViewCell.self, forCellReuseIdentifier: "Cell")
		tableView.accessibilityIdentifier = "DuckDuckGoSearchTableView"
		view.sendSubviewToBack(noResults)
		view.sendSubviewToBack(spinner)
	}
	
	override func viewWillAppear(_ animated: Bool) {
		super.viewWillAppear(animated)
...
