...
		search.text = ""
	}
	
	override func viewDidLoad() {
		super.viewDidLoad()
		
		title = "Google"
		view.backgroundColor = traitCollection.userInterfaceStyle == .dark ? .black : .white
		
		// configure search field
		search.delegate = self
		search.translatesAutoresizingMaskIntoConstraints = false
		search.layer.cornerRadius = 5.0
...
		tableView.delegate = self
		tableView.dataSource = self
		tableView.translatesAutoresizingMaskIntoConstraints = false
		tableView.register(GoogleTableViewCell.self as AnyClass, forCellReuseIdentifier: "GoogleSearchCell")
		tableView.backgroundColor = traitCollection.userInterfaceStyle == .dark ? .black : .white
		view.addSubview(tableView)
		tableView.accessibilityIdentifier = "GoogleSearchTableView"
		constraints = []
		constraints.append(tableView.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor))
		constraints.append(tableView.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor))
		constraints.append(tableView.topAnchor.constraint(equalTo: search.bottomAnchor))
		constraints.append(tableView.bottomAnchor.constraint(equalTo: view.safeAreaLayoutGuide.bottomAnchor))
		NSLayoutConstraint.activate(constraints)
...
