...
								SearchResultUIView(url: url, presentedAsModal: self.presentedAsModal)
							}
						}
					}
					.listStyle(.plain)
					.accentColor(colorScheme == .dark ? .white : .black)
					.accessibility(label: Text("BingTableView"))
				}
			}
			.frame(minWidth: 0, maxWidth: .infinity, minHeight: 0, maxHeight: .infinity, alignment: Alignment.topLeading)
		}
	}
}
...
